# wedding-agents

./: .env.example  .gitignore  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.yml  main.py  pyproject.toml  test_smolagents.py
.claude/skills/location-zone-classifier/: SKILL.md
.claude/skills/venue-data-enricher/: README.md  SKILL.md  skill.md  skill_config.json
.claude/skills/venue-etl-pipeline/: SKILL.md
.claude/skills/venue-etl-pipeline/references/: singapore_context.md
.claude/skills/venue-etl-pipeline/scripts/: deduplicate_venues.py  extract_venues.py  load_venues.py  transform_venues.py
.github/workflows/: ci.yml
backend/: __init__.py  config.py  observability.py
backend/agents/: __init__.py  venue_comparison_agent.py
backend/core/: __init__.py  agent_factory.py  tool_registry.py
backend/data/: venues.json
backend/etl/: README.md  README_V2_ARCHITECTURE.md  __init__.py  enrich_venues.py  enrich_venues_v2.py  enrichment_service.py  models.py  test_service.py
backend/etl/prompts/: enrichment_agent_prompt.md  enrichment_agent_prompt_v2.md
backend/etl/tools/: __init__.py  enrich_tool.py  enrich_tool_v2.py
backend/flows/: __init__.py  venue_comparison.py
backend/flows/venue_comparison/: agents.yaml  crew.py  tasks.yaml
backend/services/: venue_service.py
backend/tests/: test_venue_service.py
backend/tools/: __init__.py  venue_tools.py
data/: GAP_ANALYSIS.md
tests/: __init__.py
tests/integration/: __init__.py  test_venue_comparison.py
