[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wedding-agent"
version = "0.1.0"
description = "AI-powered Singapore wedding venue comparison"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai[google-genai]>=1.4.1",
    "python-dotenv>=1.2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "integration: Integration tests that may take longer to run",
    "unit: Fast unit tests",
]
