[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wedding-agent"
version = "0.1.0"
description = "AI-powered Singapore wedding venue comparison"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langfuse>=3.10.0",
    "python-dotenv>=1.2.1",
    "smolagents[litellm,telemetry]>=1.22.0",
    "opentelemetry-sdk>=1.28.2",
    "opentelemetry-exporter-otlp>=1.28.2",
    "openinference-instrumentation-smolagents>=0.1.8",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.1",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "integration: Integration tests that may take longer to run",
    "unit: Fast unit tests",
]
